--- a/lab-2/ll-2-badge.Rmd
+++ b/lab-2/ll-2-badge.Rmd
@@ -55,10 +55,10 @@ Run the code below through the step in which you write down the recipe.
 
 ```{r}
 library(tidyverse)
-library(here)
 library(tidymodels)
 
 d <- read_csv("data/online-sci-data-joined.csv")
+# **edit: if your data has 10,000+ rows, d <- distinct(student_id, course_id, .keep_all = TRUE) **
 
 set.seed(20220712)
 
@@ -67,13 +67,12 @@ train_test_split <- initial_split(d, prop = .80)
 data_train <- training(train_test_split)
 
 kfcv <- vfold_cv(data_train, v = 20) # this differentiates this from what we did before
-
 ```
 
 Here's where you can add a new feature engineering step. For the sake of this badge, choose from among those options here: <https://recipes.tidymodels.org/reference/index.html>. You can see more - if helpful - here: <https://www.tmwr.org/recipes.html>
 
 ```{r}
-my_rec <- recipe(passing_grade ~ ., data = d) %>% 
+my_rec <- recipe(final_grade ~ ., data = d) %>% # **edit**: change t final grade
     step_normalize(all_numeric_predictors()) %>% # standardizes numeric variables
     step_nzv(all_predictors()) %>% # remove predictors with a "near-zero variance"
     step_novel(all_nominal_predictors()) %>% # add a musing label for factors
@@ -87,19 +86,19 @@ Run the remaining steps.
 my_mod <-
     logistic_reg() %>% 
     set_engine("glm") %>%
-    set_mode("classification")
+    set_mode("regression") # **edit**: change to regression
 
 my_wf <-
     workflow() %>%
     add_model(my_mod) %>% 
     add_recipe(my_rec)
 
-fitted_model <- fit_resamples(my_wf, resamples = kfcv,
+fitted_model_resamples <- fit_resamples(my_wf, resamples = kfcv, # **edit: this needs to be fitted_model_resamples**
                               control = control_grid(save_pred = TRUE)) # this allows us to inspect the predictions
 
-fitted_model %>% 
+fitted_model_resamples %>% # **edit: this needs to be fitted_model_resamples**
     unnest(.metrics) %>% 
-    filter(.metric == "accuracy") # we also get another metric, the ROC; we focus just on accuracy for now
+    filter(.metric == "rmse") # **edit: change to rmse; we also get another metric, the rsq**
 ```
 
 Did that feature engineering make any difference compared to the mean predictive accuracy you found in the case study? Add a few notes below:
