--- a/lab-2/ll-2-overview-presentation.Rmd
+++ b/lab-2/ll-2-overview-presentation.Rmd
@@ -264,6 +264,7 @@ knitr::include_graphics("img/joro-pointing.jpeg", error = FALSE)
 ## For specific types of variables
 
 - Categorical variables
+    - Dummy coding 
     - Combining categories
 - Numeric variables
     - Normalizing ("standardizing")
@@ -275,7 +276,7 @@ knitr::include_graphics("img/joro-pointing.jpeg", error = FALSE)
 - We can do all of these things manually
 - But, there are also helpful functions to do this
 - Any, the {recipes} package makes it practical to carry out feature engineering steps for not only single variables, but groups of variables (or all of the variables)
-- Examples, all of which start with `_step()`:
+- Examples, all of which start with `step()`:
     - `step_dummy()`
     - `step_normalize()`
     - `step_nzv()`
@@ -323,8 +324,17 @@ We'd need to use the same training data to tune a new model---and the same testi
 # The problem introduced by feature engineering
 
 - In short, a challenges arises when we wish to use our training data _more than once_
+
+-- 
+
 - Namely, if we repeatedly training an algorithm on the same data and then make changes, we may be tailoring our model to specific features of the testing data
+
+-- 
+
 - This is a _very common and pervasive problem_ in machine learning applications
+
+-- 
+
 - Resampling conserves our testing data; we don't have to spend it until we've finalized our model
 
 ---
@@ -332,10 +342,18 @@ We'd need to use the same training data to tune a new model---and the same testi
 # Resampling (and _k_-folds cross-validation)
 
 - Resampling involves blurring the boundaries between training and testing data, _but only for the training split of the data_
+
+--
+
 - Specifically, it involves combining these two portions of our data into one, iteratively considering:
     - Some of the data to be for "training"
     - Some for "testing"
-- Then, fit measures are summed across these different samples
+
+--
+
+- Then, fit measures are **averaged** across these different samples
+
+--
 
 ---
 
@@ -345,9 +363,12 @@ We'd need to use the same training data to tune a new model---and the same testi
     - Here, some of the data is considered to be a part of the *training* set 
     - The remaining data is a part of the *testing* set
 
+--
+
 - How many sets (samples taken through resampling)?
     - This is determined by _k_, number of times the data is resampled
-    - When _k_ is equivalent to the number of rows in the data, this is often called "Leave One Out Cross-Validation" (LOOCV)
+    - When _k_ is equivalent to the number of rows in the data, this is often called "Leave One Out Cross-Validation" (LOOCV) 
+
 ---
 
 # Let's consider an example
@@ -404,6 +425,8 @@ test %>% head(3)
 ```
 
 ... through the tenth resampling, after which the fit measures are simply summed
+
+--
 
 That's it! Thankfully, we have automated tools to do this that we'll work on in the code examples
 
